--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "chat-bank",
-  "version": "0.0.1",
-  "description": "Server for banking chat app",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+	"name": "chat-bank",
+	"version": "0.0.1",
+	"description": "Server for banking chat app",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "node develop.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.18.2",
+		"express": "^4.16.2",
+		"node-wit": "^5.0.0",
+		"request": "^2.83.0"
+	}
 }
