--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
 		"express": "^4.16.2",
 		"node-wit": "^5.0.0",
 		"request": "^2.83.0"
+	},
+	"devDependencies": {
+		"dotenv": "^5.0.0",
+		"readline": "^1.3.0"
 	}
 }
