--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '2'
 services:
-  mongodb:
+  bank-chat-mongodb:
       image: mongo:latest
       container_name: "mongodb"
       volumes:
         - ./data/db:/data/db
       ports:
           - 27017:27017
-  redis:
+  bank-chat-redis:
     image: "redis:alpine"
     ports:
           - 6379:6379
