--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
-		"dev": "node develop.js",
+		"dev": "node -r dotenv/config develop.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
@@ -13,11 +13,15 @@
 	"dependencies": {
 		"body-parser": "^1.18.2",
 		"express": "^4.16.2",
+		"i18next": "^10.4.1",
+		"mongoose": "^5.0.6",
 		"node-wit": "^5.0.0",
+		"redis": "^2.8.0",
 		"request": "^2.83.0"
 	},
 	"devDependencies": {
 		"dotenv": "^5.0.0",
+		"json-beautify": "^1.0.1",
 		"readline": "^1.3.0"
 	}
 }
